--- a/assets/css/tokens.css
+++ b/assets/css/tokens.css
@@ -15,5 +15,7 @@
   --lookbook-toolbar-icon-button-size: 18px;
   --lookbook-toolbar-icon-button-color: var(--sl-color-neutral-400);
 
+  --lookbook-status-bar-height: 24px;
+
   --lookbook-divider-color: var(--sl-color-neutral-300);
 }
