Improve morphing, use checksums for keys

--- a/app/components/lookbook/ui/app/pane/pane.html.erb
+++ b/app/components/lookbook/ui/app/pane/pane.html.erb
@@ -1,4 +1,4 @@
-<%= render component_tag(id: id, x: {data: "pane"}) do %>
+<%= render component_tag(key: id, x: {data: "pane"}) do %>
   <div class="pane-toolbar">
     <h3 class="pane-title">
       <%= title %>
