--- a/app/components/lookbook/ui/app/preview_inspector/preview_inspector.html.erb
+++ b/app/components/lookbook/ui/app/preview_inspector/preview_inspector.html.erb
@@ -1,4 +1,4 @@
-<%= render component_tag(id: id, x: {data: "previewInspector"}) do %> 
+<%= render component_tag(key: id, x: {data: "previewInspector"}) do %> 
   <% if drawer? %> 
     <sl-split-panel
       class="inspector-layout"
