--- a/app/components/lookbook/ui/app/tab_group/tab_group.html.erb
+++ b/app/components/lookbook/ui/app/tab_group/tab_group.html.erb
@@ -1,5 +1,5 @@
 <%= render component_tag(
-  id: id,
+  key: id,
   x: {
     "data": "tabGroup('#{id}')",
     "on:sl-tab-show": "activeTab = $event.detail.name",
