--- a/app/components/lookbook/ui/app/tabbed_pane/tabbed_pane.html.erb
+++ b/app/components/lookbook/ui/app/tabbed_pane/tabbed_pane.html.erb
@@ -1,4 +1,4 @@
-<%= render component_tag(id: id, x: {data: "tabbedPane"}) do %>
+<%= render component_tag(key: id, x: {data: "tabbedPane"}) do %>
   <div class="pane-toolbar">
     <sl-button-group label="<%= label %> actions">
       <%= safe_join(actions.reverse) %>
