--- a/app/components/lookbook/ui/app/sidebar/sidebar_section/sidebar_section.html.erb
+++ b/app/components/lookbook/ui/app/sidebar/sidebar_section/sidebar_section.html.erb
@@ -1,6 +1,6 @@
 <%= render component_tag(x: {data: "sidebarSection"}) do %>
   <%= lookbook_pane(id: "#{id}-pane") do |pane| %>
-    <% pane.with_action(icon: :copy_minus, tooltip: "Collapse all", "@click": "collapseAll") %>
+    <% pane.with_action(icon: :copy_minus, tooltip: "Collapse all", click: "collapseAll") %>
     <% pane.with_title { title } %>
     <%= nav %>
   <% end %>
