--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -80,3 +80,9 @@ select {
 router {
   display: contents;
 }
+
+sl-tooltip {
+  &::part(body) {
+    font-size: var(--sl-font-size-x-small);
+  }
+}
